finish index, sitemap

--- a/ex01.html
+++ b/ex01.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Technologies-Annie</title>
 </head>
-<head>All About Annie</head>
-
 <body>
+    <h1>All about Annie</h1>
+    <img src="images/IMG_6340.jpg" height="300" alt="myself">
+    <p>Contact Info</p>
     <hr>
   <p> I choose Babson for its business program, small class sizes, and diverse community.</p>
-</body>
-
-
-<body>
-    <p>My favorite sport is swimming.</p>
-    <hr>
+  <p>My favorite sport is swimming.</p>
+    <img src="https://live.staticflickr.com/8521/8589583606_4b4ed6c03d_b.jpg" height="300"
+    alt="swimming">
+    <hr  />
 </body>
 </html>
