finished part 1 of ex06

--- a/ex05.html
+++ b/ex05.html
@@ -8,6 +8,15 @@
         ul{
             list-style-image: url(images/smiley.gif);
         }
+        body{
+            background: url(images/music.gif);
+            }
+        img{
+            position: relative; top:auto; z-index: -1;
+        }
+        h3{
+            position: relative; top: auto; z-index: 1;
+        }
     </style>
 </head>
 <body>
@@ -44,5 +53,8 @@
             <img src="images/Croatia.png" alt="england flag" height="30">England
         </li>
     </ol>
+    <h3> Go Beavers!</h3>
+     <img src="images/beaver.jpg" alt="beaver" style="float:center;">
+
 </body>
 </html>
