--- a/ex06.html
+++ b/ex06.html
@@ -50,6 +50,16 @@
           font-style: italic;
           text-decoration: underline;
       }
+      .mydiv {
+          background-color: yellow;
+      }
+      .seconddiv{
+          background-color: green;
+      }
+      .thirddiv{background-color: lime;}
+      .firstword{
+          font-size: 1.5em;
+      }
     </style>
   </head>
   <body>
@@ -57,24 +67,28 @@
     <h2>This line demonstrates h2</h2>
     <h3>This line shows how h3 will be different from h1 and h2</h3>
     <hr />
-    <h1>Quote One from Winston Churchill</h1>
-    <p class="blue">
-      Criticism may not be agreeable, but it is necessary. It fulfils the same
-      function as pain in the human body. It calls attention to an unhealthy
-      state of things.
-    </p>
+    <div class="mydiv">
+         <h1>Quote One from <span class= "firstword">W</span>inston <span class= "firstword">C</span>hurchill</h1>
+         <p class="blue">
+             Criticism may not be agreeable, but it is necessary. It fulfils the same function as pain in the human body. It calls attention to an unhealthy state of things.
+         </p>
+    </div>
+   <div class= "seconddiv">                                                       
     <h3 class="blue">Quote Two from Winston Churchill</h3>
     <p>
       Courage is rightly esteemed the first of human qualities... because it is
       the quality which guarantees all others. Courage is what it takes to stand
       up and speak; courage is also what it takes to sit down and listen.
     </p>
+    </div>
+    <div class="thirddiv">
     <h2 id="quote3heading">Quote Three from Winston Churchill</h2>
     <h3>This paragraph will have a border</h3>
     <p id="steven">
       Continuous effort - not strength or intelligence - is the key to unlocking
       our potential.
     </p>
+</div>
     <hr />
     <p class="blue">
       The tiger (Panthera tigris) is the largest cat species, reaching a total
