--- a/ex05.html
+++ b/ex05.html
@@ -11,11 +11,17 @@
         body{
             background: url(images/music.gif);
             }
-        img{
-            position: relative; top:auto; z-index: -1;
+        .center{
+            position: absolute;
+            left: 50%;
+            z-index: -1;
+
         }
         h3{
-            position: relative; top: auto; z-index: 1;
+            position: absolute;
+            left: 50%;
+            z-index: 3;
+        
         }
     </style>
 </head>
@@ -53,8 +59,10 @@
             <img src="images/Croatia.png" alt="england flag" height="30">England
         </li>
     </ol>
+
     <h3> Go Beavers!</h3>
-     <img src="images/beaver.jpg" alt="beaver" style="float:center;">
+     <img src="images/beaver.jpg" alt="beaver" class="center">
+    
 
 </body>
 </html>
