--- a/ex01.html
+++ b/ex01.html
@@ -15,5 +15,6 @@
     <img src="https://live.staticflickr.com/8521/8589583606_4b4ed6c03d_b.jpg" height="300"
     alt="swimming">
     <hr  />
+    <a href="sitemap.html">Sitemap</a>
 </body>
 </html>
