--- a/index.html
+++ b/index.html
@@ -1,31 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allan">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Technologies-Annie</title>
+    <style>
+        h1{
+            font-family: serif;
+            color: darkblue;
+            text-align: center;
+        }
+        h3{
+            font-family: cursive;
+            color:darkolivegreen;
+            text-align: center;
+        }
+        h2{
+            font-family: "Allan";
+            color: darkslateblue;
+            text-align: left;
+        }
+        p{
+            font-family: sans-serif;
+            color:darkseagreen;
+            font-size: 1.2em;
+        }
+        div.indent{
+            text-indent: 30px;
+        }
+        img{
+            float: left;
+            margin: 30px;
+        }
+        body{
+            background-color:lightyellow;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+        img:hover{
+            opacity: 0.5;
+        }
+        /* This makes the image transparent when the user hovers over it */
+    </style>
 </head>
 <body>
     <a id="top"></a>
     <h1>All about Annie</h1>
-    <img src="images/IMG_6340.jpg" height="300" alt="myself">
-    <h2>Contact Info</h2>
+    <h3>Contact Information</h3>
     <p>
+        Github Profile: https://github.com/annieliu2?tab=repositories
+        <br>
+        Instagram: <a href="https://www.instagram.com/anniee.liiu/">@anniee.liiu</a>
+        <br>
         <a href="mailto:aliu2@babson.edu">Email me</a>
     </p>
-    <a href="https://www.babson.edu/">Babson</a>
  <hr />
-  <p> I choose <a href="https://www.babson.edu/">Babson</a> for its business program, small class sizes, and diverse community.</p>
-    <p>
-        My favorite sport is swimming. Lorem, ipsum dolor sit amet consectetur adipisicing elit.Earum ut nemo dolorum id maiores expedita tenetur beatae, porro officiis quaerat. Veritatis optio ipsam ullam nesciunt laborum eligendi aliquam esse expedita.</p>
-    <img src="https://live.staticflickr.com/8521/8589583606_4b4ed6c03d_b.jpg" height="300"
-    alt="swimming">
-    <a href="https://www.healthline.com/health/benefits-of-swimming">swimming</a>
-    <hr />
-
-    <p><a href="sitemap.html">Sitemap</a></p>
-    <p>
-        <a href="#top">Go to Top of Page</a>
-    </p>
+ 
+     <h3>Quick Links</h3>
+     <a href="#me">About Me</a>
+     <br>
+     <a href="#interests">My Interests</a>
+ 
+ <hr>
+ <h2>
+     <a id="me"> All About Me</a>
+    </h2>
+<div class="indent">
+  <p>
+    <img src="images/IMG_6340.jpg" height="300" alt="myself">
+    I choose <a href="https://www.babson.edu/">Babson</a> for its business program, small class sizes, and diverse community. I like that it was close to NYC which is where I'm from, so I can easily go home anytime. After graduation, I plan to find a job related operations management or supply chain management in NYC. I'm not entirely sure what I want to concentrate in yet but I for sure know that I want to stay far away from accounting. I don't want to spend the rest of my life doing people's taxes.
+  </p>
+</div>
+<hr />
+<h2>
+    <a id="#interests">My Interests</a>
+</h2>
+<div class="indent">
+<p>
+    My top interest is being a <a href="https://www.buzzfeed.com/laraparker/things-every-couch-potato-will-understand">couch potato</a>
+        and watch tv all day long. The only exercise I will get is moving to the kitchen or the bathroom and then back to the couch aka my bed. I can not walk more than 300 steps a day or else I'll probably faint. Also, maybe once in a blue moon I'll up my daily exercise by playing Just Dance (another hobby) but that will only consist of me moving my arms.
+</p>
+</div>
+<hr>
+<a href="sitemap.html">My Work in WebTech</a>
 </body>
 </html>
