--- a/ex04.html
+++ b/ex04.html
@@ -86,5 +86,6 @@
       estimated at less than 1,184,911 km2 (457,497 sq mi), a 41% decline from
       the area estimated in the mid-1990s.[7]
     </p>
+    <a href="sitemap.html">Sitemap</a>
   </body>
 </html>
