--- a/sitemap.html
+++ b/sitemap.html
@@ -4,12 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Work-Annie</title>
+    <style>
+        body{
+            background-color: lavenderblush;
+            margin-right: 100px;
+            margin-left: 200px;
+        }
+        h1{
+            font-family: serif;
+            color: darkorchid;
+            text-align: center;
+        }
+        h3{
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: darkviolet;
+            font-size: 1.2em;
+        }
+        img{
+            width: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Site Map</h1>
-    <p><a href="ex01.html">ex01</a></p>
-    <p><a href="ex04.html">ex04</a></p>
+    <h1>Work done in WebTech by Annie</h1>
+    <hr>
+    <ol type="i">
+        <li>
+            <a href="ex01.html">In-Class Exercise 01</a>
+        </li>
+        <li>
+            <a href="index.html">In-Class Exercise 03</a>
+        </li>
+        <li>
+            <a href="ex04.html">In-Class Exercise 04</a>
+        </li>
+
+    </ol>
     <hr />
-    <p><a href="index.html">Homepage</a></p>
+    <p>
+        <a href="index.html"><img src="images/home.jpg" alt="home icon"></a>
+    </p>
 </body>
 </html>
