--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </h2>
 <div class="indent">
   <p>
-    <img src="images/IMG_6340.jpg" height="300" alt="myself">
+    <img src="images/pictureofme.jpg" height="300" alt="myself" >
     I choose <a href="https://www.babson.edu/">Babson</a> for its business program, small class sizes, and diverse community. I like that it was close to NYC which is where I'm from, so I can easily go home anytime. After graduation, I plan to find a job related operations management or supply chain management in NYC. I'm not entirely sure what I want to concentrate in yet but I for sure know that I want to stay far away from accounting. I don't want to spend the rest of my life doing people's taxes.
   </p>
 </div>
