--- a/sitemap.html
+++ b/sitemap.html
@@ -38,6 +38,12 @@
         <li>
             <a href="ex04.html">In-Class Exercise 04</a>
         </li>
+        <li>
+            <a href="ex05.html">In-Class Exercise 05</a>
+        </li>
+        <li>
+            <a href="ex06.html">In-Class Exercise 06</a>
+        </li>
 
     </ol>
     <hr />
