--- a/ex08-1.html
+++ b/ex08-1.html
@@ -24,6 +24,9 @@
             font-weight: bold;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
+        tr:nth-child(even){
+            background-color: gray;
+        }
     </style>
 </head>
 <body>
