--- a/sitemap.html
+++ b/sitemap.html
@@ -53,6 +53,7 @@
         <li><a href="ex09.html">In-Class Exercise 09</a></li>
         <li><a href="lec12-js-demo.html">In-Class Exercise 12</a></li>
         <li><a href="lec13.html">In-Class Exercise 13</a></li>
+        <li><a href="ex14.html">In-Class Exercise 14</a></li>
 
     </ol>
     <hr />
