--- a/hw2-2.html
+++ b/hw2-2.html
@@ -23,7 +23,9 @@
             margin-right: auto;
             width: 70%;
         }
-        input[type=checkbox]{color: blue;}
+        input[type="checkbox"] :checked{
+            background-color: blue;
+        }
     </style>
 </head>
 <body>
