--- a/quiz3-js.html
+++ b/quiz3-js.html
@@ -42,7 +42,11 @@
       const heading = document.querySelector("h1");
 
       function centerHeading() {
-        heading.style.textAlign = "center";
+        if (heading.style.textAlign === "center") {
+          heading.style.textAlign = "";
+        } esle {
+          heading.style.textAlign ="center";
+        }
       }
 
       heading.onclick = centerHeading;
