update ex16-1.html and ex16-2.html

--- a/ex16-1.html
+++ b/ex16-1.html
@@ -76,6 +76,7 @@
           alert("please enter both name and age");
         } else if (isNaN(age)) {
           alert("please enter a number for age");
+          //hide age input
         } else if (document.getElementById("noAge").checked) {
           document.querySelector("age").style.display = "none";
         }
