--- a/ex16-2.html
+++ b/ex16-2.html
@@ -7,20 +7,26 @@
   </head>
   <body>
     <h1>Temperature Converter</h1>
-<form action="">
-    <input
-      type="text"
-      id="fahrenheit"
-      placeholder="Fahrenheit"
-      name="fah"
-      value=""
-    />
+    <form action="">
+      <input
+        type="text"
+        id="fahrenheit"
+        placeholder="Fahrenheit"
+        name="fah"
+        value=""
+      />
 
-    <input type="text" id="celsius" placeholder="Celsius" name="cel" value="" />
+      <input
+        type="text"
+        id="celsius"
+        placeholder="Celsius"
+        name="cel"
+        value=""
+      />
 
-    <button id="convert">Convert</button>
-    <button id="clear">Reset</button>
-</form>
+      <button id="convert">Convert</button>
+      <button id="clear">Reset</button>
+    </form>
     <script>
       document.getElementById("convert").onclick = converttemp;
       document.getElementById("clear").onclick = clearForm;
