--- a/quiz3-js.html
+++ b/quiz3-js.html
@@ -44,7 +44,7 @@
       function centerHeading() {
         if (heading.style.textAlign === "center") {
           heading.style.textAlign = "";
-        } esle {
+        } else {
           heading.style.textAlign ="center";
         }
       }
