create ex18.html, update sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -59,6 +59,9 @@
         <li><a href="hw2-nytimes.html">HW 2-NyTimes</a></li>
         <li><a href="ex16-1.html">In-Class Exercise 16-1</a></li>
         <li><a href="ex16-2.html">In-Class Exercise 16-2</a></li>
+        <li><a href="ex17.html">In-Class Exercise 17</a></li>
+        <li><a href="ex18.html">In-Class Exercise 18</a></li>
+        <li><a href="lec19-js-animation,html">In-Class Exercise 18 Moving Lyrics</a></li>
 
     </ol>
     <hr />
